@@ -1,3 +1,9 @@
+2006-10-09	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* ima/src/client.cpp:
+	* ima/src/client_manager.cpp:
+	made client-windows resizable
+
 2006-10-08	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* ica/src/vncview.h:
